--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,5 +7,10 @@ pipeline {
                 sh 'mvn -B -DskipTests clean package'
             }
         }
+        stage('Build and test") {
+             steps {
+		sh `mvn clean install`
+             }
+       }
     }
 }
