--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
                 sh 'mvn -B -DskipTests clean package'
             }
         }
-        stage('Build and test") {
+        stage('Build and test') {
              steps {
 		sh `mvn clean install`
              }
