--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         }
         stage('Build and test') {
              steps {
-		sh `mvn clean install`
+		sh 'mvn clean install'
              }
        }
     }
