--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         stage('Build') {
             steps {
                 sh 'ls -l'
-                sh 'mvn -B -DskipTests clean package'
+                sh 'mvn -B -DskipTests clean package sonar:sonar'
             }
         }
         stage('Build and test') {
